# pedal

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
docs/: STFT.md
examples/: BandLimitedImpulseTrain.cpp  BiquadExample.cpp  BufferPlayground.cpp  CMakeLists.txt  CmakeLists.txt  Convolution.cpp  ConvolutionExample.cpp  DynamicsExample.cpp  EmptyExample.cpp  Envelopes.cpp  Granulator.cpp  LFO.cpp  LiveInputFeedbackDelay.cpp  LowFrequencyOscillators.cpp  MonophonicSampler.cpp  MonophonicSynth.cpp  MoogFilterExample.cpp  Reverb.cpp  Sequencer_01.cpp  SimpleEnvelope.cpp  VoiceSimulation.cpp  WindChimes.cpp  example_app.cpp  example_app.hpp  hello_pedal.cpp
examples/ExampleBuilds/: readme.md
examples/exampleAppSource/: example_app.cpp  example_app.hpp
examples/glfw/include/GLFW/: glfw3.h
examples/hello_pedal/: main.cpp
examples/rtaudio/: RtAudio.cpp  RtAudio.h
include/pedal/: AllPass.hpp  BLIT.hpp  BLITSaw.hpp  Biquad.hpp  Buffer.hpp  BufferPlayer.hpp  BufferTap.hpp  BufferedRMS.hpp  CREnvelope.hpp  CTEnvelope.hpp  CircularBuffer.hpp  CombFilter.hpp  Compressor.hpp  Constants.hpp  Counter.hpp  CurvedEnvelope.hpp  DebugTool.hpp  Delay.hpp  DirectionalSmoothValue.hpp  EdgeDetector.hpp  FDNReverb.hpp  Gate.hpp  HanningWindow.hpp  HighPass.hpp  ImpulseGenerator.hpp  Interpolation.hpp  LinearEnvelope.hpp  LowFrequencyOscillator.hpp  LowPass.hpp  LowPassCombFilter.hpp  MIDIEvent.hpp  MicroBenchmark.hpp  MoogLadderFilter.hpp  MoorerReverb.hpp  NSegmentLinearEnvelope.hpp  Phasor.hpp  PinkNoise.hpp  RMS.hpp  STFT.hpp  Settings.hpp  (+29 more)
src/: Buffer.cpp  BufferPlayer.cpp  BufferedRMS.cpp  CircularBuffer.cpp  Interpolation.cpp  RMS.cpp  Settings.cpp  StreamedRMS.cpp  pdlSettings.cpp  pdlSettings.hpp  pedal.cpp  utilities.cpp
src/analysis/: BufferedRMS.cpp  EdgeDetector.cpp  StreamedRMS.cpp
src/generators/: ImpulseGenerator.cpp  VOSIM.cpp  Window.cpp  Windows.cpp
src/generators/Windows/: HanningWindow.cpp
src/generators/envelopes/: CREnvelope.cpp  CTEnvelope.cpp  CurvedEnvelope.cpp  LinearEnvelope.cpp  NSegmentLinearEnvelope.cpp
src/generators/noise/: PinkNoise.cpp  WhiteNoise.cpp
src/generators/oscillators/: BLIT.cpp  BLITSaw.cpp  LowFrequencyOscillator.cpp  Phasor.cpp  TOscillators.cpp  TOscillators.hpp  TPhasor.cpp  TPhasor.hpp  TSaw.cpp  TSine.cpp  TSine.hpp  TSquare.cpp  TTriangle.cpp  TrivialSaw.cpp  TrivialSine.cpp  TrivialSquare.cpp  TrivialTriangle.cpp  WTSaw.cpp  WTSine.cpp  WTSquare.cpp  WTTriangle.cpp  WaveTableSaw.cpp  WaveTableSine.cpp  WaveTableSquare.cpp  WaveTableTriangle.cpp
src/modifiers/delay/: BufferTap.cpp  Delay.cpp  Tap.cpp  TapIn.cpp
src/modifiers/dynamic/: Compressor.cpp  Gate.cpp
src/modifiers/filters/: AllPass.cpp  Biquad.cpp  CombFilter.cpp  HighPass.cpp  LowPass.cpp  LowPassCombFilter.cpp  MoogLadderFilter.cpp
src/modifiers/reverb/: FDNReverb.cpp  MoorerReverb.cpp
src/spectral/: STFT.cpp
src/utilities/: Counter.cpp  DebugTool.cpp  Interpolation.cpp  MIDIEvent.cpp  MicroBenchmark.cpp  utilities.cpp
tests/: CMakeLists.txt  MoogLadderFilterTests.cpp  MoogLadderFilterTests.hpp  main.cpp
